2002-11-05  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* ChangeLog: Added.


Local Variables:
mode: change-log
left-margin: 8
fill-column: 76
version-control: never
End: